# minesweeper

./: README.md  minesweeper.cabal  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/install/aarch64-osx/4044edbce833ada5a2a0433d8901933c92cba52988d772531c8f13a01d58ae2e/9.6.6/lib/aarch64-osx-ghc-9.6.6/: libHSminesweeper-0.1.0.0-9vOWuec0davEcCZZecBGZ0-ghc9.6.6.dylib
.stack-work/install/aarch64-osx/4044edbce833ada5a2a0433d8901933c92cba52988d772531c8f13a01d58ae2e/9.6.6/lib/aarch64-osx-ghc-9.6.6/minesweeper-0.1.0.0-9vOWuec0davEcCZZecBGZ0/: Cell.dyn_hi  Cell.hi  Game.dyn_hi
.stack-work/install/aarch64-osx/4044edbce833ada5a2a0433d8901933c92cba52988d772531c8f13a01d58ae2e/9.6.6/lib/aarch64-osx-ghc-9.6.6/minesweeper-0.1.0.0-9vOWuec0davEcCZZecBGZ0/Grid/: Core.dyn_hi  Operation.dyn_hi  Operation.hi
.stack-work/install/aarch64-osx/4044edbce833ada5a2a0433d8901933c92cba52988d772531c8f13a01d58ae2e/9.6.6/pkgdb/: minesweeper-0.1.0.0-9vOWuec0davEcCZZecBGZ0.conf  package.cache
app/: Main.hs
src/: Cell.hs  Game.hs
src/Grid/: Core.hs  Generation.hs  Operation.hs
test/: Spec.hs
